<resources>
    <string name="app_name">UTSPraktik-AKBIF10-10122914-DwiNurcahyo</string>
    <string name="pelaksanaan">Pelaksanaan PPDB Tahap 1 - 2023</string>
    <string name="detail">Detail</string>
    <string name="verifikasi_">Persiapan</string>
    <string name="april_5_mei">17 Mei - 05 Juni 2023</string>
    <string name="pengumuman_">Pengumuman Hasil Seleksi</string>
    <string name="anda_dinyat">Anda dinyatakan diterima di</string>
    <string name="sma_negeri_">SMA Negeri 1 Bojonggede</string>
    <string name="jalur_prest">Jalur Prestasi Kejuaraan</string>

</resources>